--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "TagCloud": "^2.2.0",
     "web-vitals": "^3.1.0"
   },
   "overrides": {
