--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codespaces-react",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "homepage": "https://moxer-mmh.github.io/Real-Time-Communication-and-Collaboration-Platform",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -23,6 +24,8 @@
     "deploy": "gh-pages -d build",
     "start": "set BROWSER=none && set WDS_SOCKET_PORT=0 && vite --port 3000",
     "build": "vite build",
+    "dev": "vite",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest"
   },
@@ -45,9 +48,15 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.1.1",
     "jsdom": "^22.1.0",
-    "vite": "^4.5.3",
-    "vitest": "^0.34.6"
+    "vitest": "^0.34.6",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "vite": "^5.2.0"
   }
 }
