--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,12 +34,13 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '16.x'
-    - run: npm install  
-    - run: npm run deploy
+    - run: npm ci  
+    - run: npm run build
     
     - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
-  
+      run: |
+        git config --global user.name "${{ env.GIT_USER_NAME }}"
+        git config --global user.email "${{ env.GIT_USER_EMAIL }}"
+        npm run deploy
+        gh-pages -d dist
+      
