--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "homepage": "https://moxer-mmh.github.io/rtcp",
+  "homepage": "https://moxer-mmh.github.io/Real-Time-Communication-and-Collaboration-Platform",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
