--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,5 @@
 name: CI/CD
 
-# Triggers the workflow on push or pull request events
 on:
   push:
     branches: [main]
@@ -8,7 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  # Build and test the project
   build:
     runs-on: ubuntu-latest
 
@@ -17,9 +15,19 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "16.x"
+          node-version: '16.x'
 
       - run: npm ci
       - run: npm run build --if-present
       - run: npm test
-  
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
