--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
-    "start": "set BROWSER=none && set WDS_SOCKET_PORT=0 && vite --port 3000",
+    "start": "vite --port 3000",
     "build": "vite build",
     "dev": "vite",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
