--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
+    "jsdom": "^24.1.0",
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
