--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.1.0",
     "vite": "^5.2.0",
+    "gh-pages": "^6.1.1",
     "vitest": "^1.6.0"
   }
 }
