--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
     "gh-pages": "^6.1.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
@@ -34,9 +35,9 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "gh-pages": "^6.1.1",
     "jsdom": "^24.1.0",
     "vite": "^5.2.0",
-    "gh-pages": "^6.1.1",
     "vitest": "^1.6.0"
   }
 }
