--- a/package.json
+++ b/package.json
@@ -1,43 +1,25 @@
 {
   "name": "rtcacp",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "homepage": "https://moxer-mmh.github.io/RTCACP",
+  "version": "1.0.0",
+  "description": "Real-Time Communication and Collaboration Platform",
+  "main": "server.js",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "start": "vite --port 3000",
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "vitest"
+    "server": "nodemon backend/server.js"
   },
+  "type": "module",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.6",
-    "@testing-library/react": "^16.0.0",
-    "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.7.2",
-    "gh-pages": "^6.1.1",
-    "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1",
-    "TagCloud": "^2.5.0",
-    "web-vitals": "^4.1.1"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "gh-pages": "^6.1.1",
-    "jsdom": "^24.1.0",
-    "vite": "^5.2.0",
-    "vitest": "^1.6.0"
+    "nodemon": "^3.1.4"
   }
 }
