--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,14 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.2",
+    "flowbite-react": "^0.10.1",
     "gh-pages": "^6.1.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "TagCloud": "^2.5.0",
     "web-vitals": "^4.1.1"
   },
