--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "TagCloud": "^2.5.0",
-    "web-vitals": "^4.1.1"
+    "web-vitals": "^4.1.1",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
