--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Real-Time Communication and Collaboration Platform",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js"
+    "server": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
   "keywords": [],
@@ -17,6 +19,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
+    "rtcacp": "file:",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
